--- a/index.html
+++ b/index.html
@@ -34,6 +34,23 @@
           </div>
         </div>
       </nav>
+    <section id="home" class="home container">
+        <div class="row d-flex align-items-center">
+            <div class="col-6">
+                <h3 class="fw-semibold">Hi! I am</h3>
+                <h1 class="fw-bold">Bagus Arya</h1>
+                <p>Im FrontEnd Developer Based In Indonesia</p>
+                <a class="btn button" href="">Resume</a>
+            </div>
+            <div class="col-6">
+                <img src="./images/potrait.png" alt="" width="500">
+            </div>
+        </div>
+        <div class="arrow w-100 d-flex align-items-center flex-column">
+          <a class="text-decoration-none text-dark mt-3" href="">More Info</a>
+          <img id="arrow" class="mt-1" src="./images/arrow.svg" alt="">
+        </div>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
