--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
         </div>
         <div class="arrow w-100 d-flex align-items-center flex-column">
-          <a class="text-decoration-none text-dark mt-3" href="">More Info</a>
+          <a class="text-decoration-none text-dark mt-3" href="#about">More Info</a>
           <img id="arrow" class="mt-1" src="./images/arrow.svg" alt="">
         </div>
     </section>
