--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
       </nav>
     <section id="home" class="home container">
         <div class="row d-flex align-items-center">
-            <div class="col-6">
+            <div class="col-7">
                 <h3 class="fw-semibold">Hi! I am</h3>
                 <h1 class="fw-bold">Bagus Arya</h1>
                 <p>Im FrontEnd Developer Based In Indonesia</p>
                 <a class="btn button" href="">Resume</a>
             </div>
-            <div class="col-6">
+            <div class="col-5">
                 <img src="./images/potrait.png" alt="" width="500">
             </div>
         </div>
@@ -50,6 +50,41 @@
           <a class="text-decoration-none text-dark mt-3" href="#about">More Info</a>
           <img id="arrow" class="mt-1" src="./images/arrow.svg" alt="">
         </div>
+    </section>
+    <section id="about" class="about container">
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum esse ducimus sequi neque quibusdam repellendus delectus aliquid, accusantium dolores facere reiciendis laudantium placeat aut odio omnis iste deleniti? Dignissimos, molestias.</p>
+      <div class="about-exp">
+        <div class="about-exp-item">
+          <div class="about-exp-item-header">
+            <div>
+              <h5>Frontweb Developer</h5>
+              <p>Coding Studio (20xx)</p>
+            </div>
+            <button class="btn button" onclick="toggleDetail(event)">More Info</button>
+          </div>
+          <p class="about-exp-item-detail ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam totam et iure maiores sint at, ex aspernatur officia nostrum ducimus dicta expedita blanditiis deserunt aliquid, laudantium odio, iusto esse cum!</p>
+        </div>
+        <div class="about-exp-item">
+          <div class="about-exp-item-header">
+            <div>
+              <h5>Frontweb Developer</h5>
+              <p>Coding Studio (20xx)</p>
+            </div>
+            <button class="btn button" onclick="toggleDetail(event)">More Info</button>
+          </div>
+          <p class="about-exp-item-detail">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam totam et iure maiores sint at, ex aspernatur officia nostrum ducimus dicta expedita blanditiis deserunt aliquid, laudantium odio, iusto esse cum!</p>
+        </div>
+        <div class="about-exp-item">
+          <div class="about-exp-item-header">
+            <div>
+              <h5>Frontweb Developer</h5>
+              <p>Coding Studio (20xx)</p>
+            </div>
+            <button class="btn button" onclick="toggleDetail(event)">More Info</button>
+          </div>
+          <p class="about-exp-item-detail ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam totam et iure maiores sint at, ex aspernatur officia nostrum ducimus dicta expedita blanditiis deserunt aliquid, laudantium odio, iusto esse cum!</p>
+        </div>
+      </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
