--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container">
-          <a class="navbar-brand fs-4 fw-bold" href="#">Bagus Arya</a>
+          <a class="navbar-brand fs-4 fw-bold" href="#">Arr.dev</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -83,6 +83,24 @@
             <button class="btn button" onclick="toggleDetail(event)">More Info</button>
           </div>
           <p class="about-exp-item-detail ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam totam et iure maiores sint at, ex aspernatur officia nostrum ducimus dicta expedita blanditiis deserunt aliquid, laudantium odio, iusto esse cum!</p>
+        </div>
+      </div>
+    </section>
+    <section id="work" class="work container">
+      <div class="row d-flex align-items-center gap-5">
+        <div class="col">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi totam earum doloribus quo magnam cupiditate nisi, alias placeat hic maxime incidunt vero dolore ipsam praesentium vel soluta aut, rerum laborum cum, reprehenderit dignissimos explicabo veritatis omnis eveniet. Laudantium inventore quos esse deserunt obcaecati assumenda eum! Corrupti unde rerum nihil quisquam.</p>
+        </div>
+        <div class="col work-img">
+          <div class="work-img-item" id="work-1">
+            <img src="images/work-1.png" alt="work 1"  width="50">
+          </div>
+          <div class="work-img-item" id="work-2">
+            <img src="images/work-2.png" alt="work 2"  width="50">
+          </div>
+          <div class="work-img-item" id="work-3">
+            <img src="images/work-3.png" alt="work 3"  width="50">
+          </div>
         </div>
       </div>
     </section>
